// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharactersFilter Component should render CharactersFilter correctly 1`] = `
<div>
  <ul
    className="pagination center-align"
  >
    <li>
      <a
        href="/characters/letter/a"
        onClick={[Function]}
      >
        a
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/b"
        onClick={[Function]}
      >
        b
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/c"
        onClick={[Function]}
      >
        c
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/d"
        onClick={[Function]}
      >
        d
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/e"
        onClick={[Function]}
      >
        e
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/f"
        onClick={[Function]}
      >
        f
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/g"
        onClick={[Function]}
      >
        g
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/h"
        onClick={[Function]}
      >
        h
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/i"
        onClick={[Function]}
      >
        i
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/j"
        onClick={[Function]}
      >
        j
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/k"
        onClick={[Function]}
      >
        k
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/l"
        onClick={[Function]}
      >
        l
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/m"
        onClick={[Function]}
      >
        m
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/n"
        onClick={[Function]}
      >
        n
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/o"
        onClick={[Function]}
      >
        o
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/p"
        onClick={[Function]}
      >
        p
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/q"
        onClick={[Function]}
      >
        q
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/r"
        onClick={[Function]}
      >
        r
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/s"
        onClick={[Function]}
      >
        s
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/t"
        onClick={[Function]}
      >
        t
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/u"
        onClick={[Function]}
      >
        u
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/v"
        onClick={[Function]}
      >
        v
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/w"
        onClick={[Function]}
      >
        w
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/x"
        onClick={[Function]}
      >
        x
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/y"
        onClick={[Function]}
      >
        y
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/z"
        onClick={[Function]}
      >
        z
      </a>
    </li>
  </ul>
  <div
    className="row card-container"
  />
</div>
`;

exports[`CharactersFilter Component should render CharactersFilter with components 1`] = `
<div>
  <ul
    className="pagination center-align"
  >
    <li>
      <a
        href="/characters/letter/a"
        onClick={[Function]}
      >
        a
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/b"
        onClick={[Function]}
      >
        b
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/c"
        onClick={[Function]}
      >
        c
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/d"
        onClick={[Function]}
      >
        d
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/e"
        onClick={[Function]}
      >
        e
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/f"
        onClick={[Function]}
      >
        f
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/g"
        onClick={[Function]}
      >
        g
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/h"
        onClick={[Function]}
      >
        h
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/i"
        onClick={[Function]}
      >
        i
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/j"
        onClick={[Function]}
      >
        j
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/k"
        onClick={[Function]}
      >
        k
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/l"
        onClick={[Function]}
      >
        l
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/m"
        onClick={[Function]}
      >
        m
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/n"
        onClick={[Function]}
      >
        n
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/o"
        onClick={[Function]}
      >
        o
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/p"
        onClick={[Function]}
      >
        p
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/q"
        onClick={[Function]}
      >
        q
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/r"
        onClick={[Function]}
      >
        r
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/s"
        onClick={[Function]}
      >
        s
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/t"
        onClick={[Function]}
      >
        t
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/u"
        onClick={[Function]}
      >
        u
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/v"
        onClick={[Function]}
      >
        v
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/w"
        onClick={[Function]}
      >
        w
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/x"
        onClick={[Function]}
      >
        x
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/y"
        onClick={[Function]}
      >
        y
      </a>
    </li>
    <li>
      <a
        href="/characters/letter/z"
        onClick={[Function]}
      >
        z
      </a>
    </li>
  </ul>
  <div
    className="row card-container"
  >
    <div
      className="card"
    >
      <div
        className="card-image"
      >
        <img
          alt=""
          src="path.jpg"
        />
        <a
          className="btn-floating halfway-fab waves-effect waves-light red"
          onClick={[Function]}
        >
          <i
            className="material-icons"
          >
            add
          </i>
        </a>
      </div>
      <div
        className="card-content"
      >
        <span
          className="card-title"
        >
          character
        </span>
        <p
          dangerouslySetInnerHTML={
            Object {
              "__html": "text",
            }
          }
        />
      </div>
      <div
        className="card-action"
      >
        <a
          href="/characters/id/undefined"
          onClick={[Function]}
        >
          En voir plus
        </a>
      </div>
    </div>
  </div>
</div>
`;
